Refatoração e modulação do projeto